--- a/backend/modules/package.json
+++ b/backend/modules/package.json
@@ -1,11 +1,11 @@
 {
   "name": "modules",
   "version": "1.0.0",
-  "description": "",
+  "description": "A Training on Modules",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "Abhishek Ranjan",
   "license": "ISC"
 }
